--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
+    "@types/node": "^14.14.31",
     "chai": "^4.3.0",
     "mocha": "^8.3.0",
     "typescript": "^4.1.5"
